[package]
name = "maruc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
druid = { version="0.7.0", features=["im"] }
matrix-sdk = { version="0.4.1", features = [] }
tokio = { version="1", features=["full"] }
