[package]
name = "maruc"
version = "0.1.0"
edition = "2021"
authors = ["texel <texelsensei@posteo.net>"]
description = "Chat client using the matrix protocol"
readme = "README.md"
license = "Unlicense"
repository = "https://github.com/texel-sensei/maruc"
keywords = ["matrix", "chat", "messaging"]
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
matrix-sdk = { version="0.4.1", features = [] }
tokio = { version="1", features=["full"] }
relm4 = { version = "0.4", features = ["macros"] }
relm4-components = "0.4"

# this needs to be at most 1.3, because of a sub-dependency of matrix-sdk requiring = 1.3
zeroize = "1.3"

[dependencies.gtk4]
version = "0.4.7"
features = ["v4_4"]
